demos/asm-mcp-multi-clusters/terraform/lab_materials/asm-ingressgateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    istio-injection: enabled
  name: asm-ingress
